--- a/gb/16/4/11/n7542850.md
+++ b/gb/16/4/11/n7542850.md
@@ -1,11 +1,11 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hbdsrs3314/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hbdsrs3314/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hbdsrs3314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hbdsrs3314/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hbdsrs3314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>自然生产救一命 永欣蔡菊镁相助</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2016年04月11日讯】?（大纪元记者宋顺澈台湾新北市报导）?这是一件迂回曲折的<ahref="https://github.com/hbdsrs3314/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>，宝贵<ahref="https://github.com/hbdsrs3314/djy/blob/master/gb/tag/%E7%BB%8F%E9%AA%8C.md#1">经验</a><ahref="https://github.com/hbdsrs3314/djy/blob/master/gb/tag/%E5%88%86%E4%BA%AB.md#1">分享</a>，希望对于新手夫妻、新手妈妈有一点帮助，起源是台中的产妇玉霜之前在永欣助产所由蔡纱宁助产士帮助<ahref="https://github.com/hbdsrs3314/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>检回一命的真实故事，内容峰回路转，让人回味，蔡纱宁现在改名为蔡菊镁，为禾颐助产所负责人，目前担任新北市助产师公会理事长，以下是产妇夫妻共同缮写的原文，提供给大家参考。</p>
+<p>【大纪元2016年04月11日讯】?（大纪元记者宋顺澈台湾新北市报导）?这是一件迂回曲折的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>，宝贵<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BB%8F%E9%AA%8C.md#1">经验</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%88%86%E4%BA%AB.md#1">分享</a>，希望对于新手夫妻、新手妈妈有一点帮助，起源是台中的产妇玉霜之前在永欣助产所由蔡纱宁助产士帮助<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%87%AA%E7%84%B6%E7%94%9F%E4%BA%A7.md#1">自然生产</a>检回一命的真实故事，内容峰回路转，让人回味，蔡纱宁现在改名为蔡菊镁，为禾颐助产所负责人，目前担任新北市助产师公会理事长，以下是产妇夫妻共同缮写的原文，提供给大家参考。</p>
 <p>这是发生在我们本身的事情，当初记者曾经要求采访，但是我们不想惹麻烦推辞掉了，如今媒体报导永欣助产所，我们认为不该独善其身，因此我们无法考虑其他，将过程写下供众参考，本原稿由我们负责。</p>
 <p>玉霜和德荣讨论了几个月，老是觉得生产的过程似乎机械化了，痛的时候在外面等，开几指时进产房&#8230;&#8230;&#8230;，过几小时后打催生针，再几小时再打催生针、全开几小时后开刀处理，有一点像工厂，于是德荣上网搜寻相关资料，意外发现除妇产科以外，助产所也可以帮产妇接生，经与蔡纱宁助产士几次沟通后，德荣认为请蔡小姐接生会比较好，但是玉霜可能会有不安全感，而亲友亦可能质疑，于是，德荣要玉霜自己决定。</p>
 <p>德荣：“我发现除妇产科以外，助产所也可以帮产妇接生 ，你要不要考虑一下？”<br />
@@ -74,7 +74,7 @@
 德荣：“我知道很多人认为这不科学，只是我当年研究所借故延毕一年，看了许多医生也没辄，死马当活马医还能怎样。”<br />
 玉霜：“药签总共才120方，难道全部的病就只要这120方就能医治。”<br />
 德荣：“我说死马当活马医，不是没路了我不会跟你提起。”<br />
-后来玉霜接受了药签，服用一阵子刚好来得及在产假结束前恢复体力回学校教书，很快的玉霜又怀孕了，小夫妻依照岳母指示去台中知名妇产科产检，〈依照上次<ahref="https://github.com/hbdsrs3314/djy/blob/master/gb/tag/%E7%BB%8F%E9%AA%8C.md#1">经验</a>本来不想去，因为医院有许多细菌，但不是去博○妇产科。”</p>
+后来玉霜接受了药签，服用一阵子刚好来得及在产假结束前恢复体力回学校教书，很快的玉霜又怀孕了，小夫妻依照岳母指示去台中知名妇产科产检，〈依照上次<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%BB%8F%E9%AA%8C.md#1">经验</a>本来不想去，因为医院有许多细菌，但不是去博○妇产科。”</p>
 <p>医生：“你们年纪偏大，建议做羊膜穿刺。”</p>
 <p>玉霜：“不用了，我才30岁不算高龄产妇。”<br />
 医生：“不做羊膜穿刺，无法发现小孩是否有先天性急病。”<br />
@@ -110,47 +110,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/1/7/8/n107578.md#1">剖腹生产后再自然生产极危险</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/3/5/29/n320717.md#1">首例疑染SARS孕妇自然生产</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/7/5/27/n1723914.md#1">世界罕见  妇女剩一半子宫还自然生产</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/7/10/31/n1885804.md#1">研究：除非胎位异常 产妇宜自然生产</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/10/7/25/n2976278.md#1">美妇产学会：剖腹产后可选择自然生产</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/11/3/15/n3198623.md#1">晚婚成趋势　高龄妇女自然生产非难事</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/12/2/1/n3499717.md#1">14磅重巨大婴 美国母亲自然生产</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/13/7/29/n3928137.md#1">凯特自然生产未用止痛药 医生动容</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/14/6/28/n4188254.md#1">研究：高龄自然生产妇或具长寿基因</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/16/3/27/n7463285.md#1">自然生产胎儿健康 美丽人生由此开始</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/1/7/8/n107578.md#1">剖腹生产后再自然生产极危险</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/3/5/29/n320717.md#1">首例疑染SARS孕妇自然生产</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/5/27/n1723914.md#1">世界罕见  妇女剩一半子宫还自然生产</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/10/31/n1885804.md#1">研究：除非胎位异常 产妇宜自然生产</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/7/25/n2976278.md#1">美妇产学会：剖腹产后可选择自然生产</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/3/15/n3198623.md#1">晚婚成趋势　高龄妇女自然生产非难事</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/12/2/1/n3499717.md#1">14磅重巨大婴 美国母亲自然生产</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/7/29/n3928137.md#1">凯特自然生产未用止痛药 医生动容</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/28/n4188254.md#1">研究：高龄自然生产妇或具长寿基因</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/27/n7463285.md#1">自然生产胎儿健康 美丽人生由此开始</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/25/n10088158.md#1" target="_blank">林辉：民国长春市长厚颜事共 文革差点被打死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/3/29/n2063507.md#1" target="_blank">是自焚还是骗局？</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/26/n9894907.md#1" target="_blank">毛时代的诗坛乱象</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/3/n12920672.md#1">目击30公分高外星人走出UFO 玻国居民惊呆</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/29/n12914467.md#1">【未解之谜】车祸丧生 两姐妹转生再“回家”</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/26/n12906271.md#1">麦克阿瑟的巅峰之战──仁川登陆战</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/23/n12900882.md#1">美好的缘分 生命的奇迹</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/7/n12930001.md#1">【预告】新世纪力作《抉择》5月7日网络首映</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929554.md#1">【时事纵横】中共暗布战局？布林肯连发警告</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929584.md#1">【横河观点】报应太快？政法委“点火”成残骸</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12924981.md#1">为8千万元与周星驰决裂？华谊兄弟惨不忍睹</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924637.md#1">受郑爽事件影响？张国立晒深夜收工照被骂翻</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12926219.md#1">【微视频】赵婷被中共封杀 另有不为人知原因？</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12927345.md#1">嘲讽成龙？香港导演拍《鼠胆龙威》意外大卖</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12924981.md#1">为8千万元与周星驰决裂？华谊兄弟惨不忍睹</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12924637.md#1">受郑爽事件影响？张国立晒深夜收工照被骂翻</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/6/n12929178.md#1">曾批刘德华不算歌手 杨坤商演现尴尬一幕</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12923745.md#1">单亲妈难为 彭佳慧：孩子是撑下去的动力</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/30/n12916472.md#1">小苏打最大功效不是除霉？4妙用你一定要知道</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12925208.md#1">立夏睡午觉、吃红色食物养心 2类人不宜睡太久</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/4/n12923545.md#1">众目睽睽之下 魔术师偷走小布什总统的手表</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/5/5/n12925607.md#1">遭大虎头蜂入侵 日本蜜蜂集体“热死”它</a></li>
-<li><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/21/4/28/n12909895.md#1">掉发、秃头 2种偏方有效吗？中医3招助生发</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741045.md#1">【神韵早期节目】唐玄宗游月宫（2013年制作）</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hbdsrs3314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hbdsrs3314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/11/n7542850.htm">自然生产救一命 永欣蔡菊镁相助</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/11/n7542850.htm">自然生产救一命 永欣蔡菊镁相助</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hbdsrs3314/djy/blob/master/gb/16/4/11/n7542850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hbdsrs3314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hbdsrs3314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hbdsrs3314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hbdsrs3314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/16/4/11/n7542850.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
